--- a/index.html
+++ b/index.html
@@ -1,138 +1,96 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<title>Kunumeo Battle Online</title>
-	
-	<!-- Standardised web app manifest -->
-	<link rel="manifest" href="appmanifest.json" />
-	
-	<!-- Allow fullscreen mode on iOS devices. (These are Apple specific meta tags.) -->
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui" />
-	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-	<link rel="apple-touch-icon" sizes="256x256" href="icon-256.png" />
-	<meta name="HandheldFriendly" content="true" />
-	
-	<!-- Chrome for Android web app tags -->
-	<meta name="mobile-web-app-capable" content="yes" />
-	<link rel="shortcut icon" sizes="256x256" href="icon-256.png" />
+int rosso = 11, verde = 13, giallo = 12, pin_pulsante = A0, pulsante = 0, tempo = 0, conta = 0;
+float analog;
+bool verde_acceso = true, rosso_acceso = false, giallo_acceso = false, semaforo_acceso = true, antirimbalzon_in_corso = false, somma = false;
+unsigned long fine_tempo = 0;
 
-    <!-- All margins and padding must be zero for the canvas to fill the screen. -->
-	<style type="text/css">
-		* {
-			padding: 0;
-			margin: 0;
-		}
-		html, body {
-			background: #000;
-			color: #fff;
-			overflow: hidden;
-			touch-action: none;
-			-ms-touch-action: none;
-		}
-		canvas {
-			touch-action-delay: none;
-			touch-action: none;
-			-ms-touch-action: none;
-		}
-    </style>
-	
 
-</head> 
- 
-<body> 
-	<div id="fb-root"></div>
-	
-	<script>
-	// Issue a warning if trying to preview an exported project on disk.
-	(function(){
-		// Check for running exported on file protocol
-		if (window.location.protocol.substr(0, 4) === "file")
-		{
-			alert("Exported games won't work until you upload them. (When running on the file:/// protocol, browsers block many features from working for security reasons.)");
-		}
-	})();
-	</script>
-	
-	<!-- The canvas must be inside a div called c2canvasdiv -->
-	<div id="c2canvasdiv">
-	
-		<!-- The canvas the project will render to.  If you change its ID, don't forget to change the
-		ID the runtime looks for in the jQuery events above (ready() and cr_sizeCanvas()). -->
-		<canvas id="c2canvas" width="854" height="480">
-			<!-- This text is displayed if the visitor's browser does not support HTML5.
-			You can change it, but it is a good idea to link to a description of a browser
-			and provide some links to download some popular HTML5-compatible browsers. -->
-			<h1>Your browser does not appear to support HTML5.  Try upgrading your browser to the latest version.  <a href="http://www.whatbrowser.org">What is a browser?</a>
-			<br/><br/><a href="http://www.microsoft.com/windows/internet-explorer/default.aspx">Microsoft Internet Explorer</a><br/>
-			<a href="http://www.mozilla.com/firefox/">Mozilla Firefox</a><br/>
-			<a href="http://www.google.com/chrome/">Google Chrome</a><br/>
-			<a href="http://www.apple.com/safari/download/">Apple Safari</a></h1>
-		</canvas>
-		
-	</div>
-	
-	<!-- Pages load faster with scripts at the bottom -->
-	
-	<!-- Construct 2 exported games require jQuery. -->
-	<script src="jquery-3.4.1.min.js"></script>
+void setup() {
+  pinMode(verde, OUTPUT);
+  pinMode(giallo, OUTPUT);
+  pinMode(rosso, OUTPUT);
+  pinMode(10, OUTPUT);
+  pinMode(pin_pulsante, INPUT);
+  digitalWrite(verde, LOW);
+  digitalWrite(giallo, LOW);
+  digitalWrite(rosso, LOW);
+  Serial.begin(9600);
+  digitalWrite(verde, HIGH);
+  delay(2000);
+}
 
-	<script src="Photon-Javascript_SDK.min.js"></script>
-	<script src="firebase.js"></script>
+void loop() {
+  analog = analogRead(pin_pulsante);
 
-	
-    <!-- The runtime script.  You can rename it, but don't forget to rename the reference here as well.
-    This file will have been minified and obfuscated if you enabled "Minify script" during export. -->
-	<script src="c2runtime.js"></script>
+  if (analog == 1023.0) {
 
-    <script>
-		// Start the Construct 2 project running on window load.
-		jQuery(document).ready(function ()
-		{			
-			// Create new runtime using the c2canvas
-			cr_createRuntime("c2canvas");
-		});
-		
-		// Pause and resume on page becoming visible/invisible
-		function onVisibilityChanged() {
-			if (document.hidden || document.mozHidden || document.webkitHidden || document.msHidden)
-				cr_setSuspended(true);
-			else
-				cr_setSuspended(false);
-		};
-		
-		document.addEventListener("visibilitychange", onVisibilityChanged, false);
-		document.addEventListener("mozvisibilitychange", onVisibilityChanged, false);
-		document.addEventListener("webkitvisibilitychange", onVisibilityChanged, false);
-		document.addEventListener("msvisibilitychange", onVisibilityChanged, false);
-		
-		function OnRegisterSWError(e)
-		{
-			console.warn("Failed to register service worker: ", e);
-		};
-		
-		// Runtime calls this global method when ready to start caching (i.e. after startup).
-		// This registers the service worker which caches resources for offline support.
-		window.C2_RegisterSW = function C2_RegisterSW()
-		{
-			if (!navigator.serviceWorker)
-				return;		// no SW support, ignore call
-			
-			try {
-				navigator.serviceWorker.register("sw.js", { scope: "./" })
-				.then(function (reg)
-				{
-					console.log("Registered service worker on " + reg.scope);
-				})
-				.catch(OnRegisterSWError);
-			}
-			catch (e)
-			{
-				OnRegisterSWError(e);
-			}
-		};
-    </script>
-</body> 
-</html> 
+    somma = true;
+    delay(100);
+
+  } else if (somma == true) {
+    conta++;
+    delay(100);
+    somma = false;
+    Serial.println(conta);
+    if (conta % 2 == 0) {
+      semaforo_acceso = false;
+    } else {
+      semaforo_acceso = true;
+    }
+  }
+
+
+
+  if (millis() % 2000 == 0 && semaforo_acceso && millis() != fine_tempo) {
+    fine_tempo = millis();
+    acceso();
+  } else if (!semaforo_acceso && millis() % 2000 == 0 && millis() != fine_tempo) {
+    fine_tempo = millis();
+    spento();
+  }
+
+}
+
+
+
+
+void spento() {
+  if(verde_acceso){
+    digitalWrite(verde,LOW);
+    }else if(rosso_acceso){
+      digitalWrite(rosso,LOW);
+      }
+  Serial.println("semaforo spento");
+  if (giallo_acceso) {
+    digitalWrite(giallo, LOW);
+    giallo_acceso = false;
+  } else {
+    digitalWrite(giallo, HIGH);
+    giallo_acceso = true;
+  }
+}
+
+
+
+void acceso() {
+
+  Serial.println("semaforo acceso");
+  if (verde_acceso) {
+    digitalWrite(giallo, HIGH);
+    delay(100);
+    digitalWrite(verde, LOW);
+    giallo_acceso = true;
+    verde_acceso = false;
+  } else if (giallo_acceso) {
+    digitalWrite(giallo, LOW);
+    delay(100);
+    digitalWrite(rosso, HIGH);
+    giallo_acceso = false;
+    rosso_acceso = true;
+  } else if (rosso_acceso) {
+    digitalWrite(rosso, LOW);
+    delay(100);
+    digitalWrite(verde, HIGH);
+    verde_acceso = true;
+    rosso_acceso = false;
+  }
+}
