--- a/1.html
+++ b/1.html
@@ -1,1 +1,10 @@
-ciao
+<!DOCTYPE html>
+<html>
+<head>
+    <title>sito di piccia</title>
+</head>
+<body>
+    <img src="manda1.png">
+    <img src="manda.png">
+</body>
+</html>
