--- a/1.html
+++ b/1.html
@@ -4,7 +4,7 @@
     <title>sito di piccia</title>
 </head>
 <body>
-    <img src="\manda1.png">
+    <img src="img/manda1.png">
     <img src="manda.png">
 </body>
 </html>
