--- a/1.html
+++ b/1.html
@@ -4,7 +4,7 @@
     <title>sito di piccia</title>
 </head>
 <body>
-    <img src="img/manda1.png">
-    <img src="manda.png">
+    <img src="img/manda1.PNG">
+    <img src="manda.PNG">
 </body>
 </html>
