--- a/1.html
+++ b/1.html
@@ -25,7 +25,7 @@ copyImgBtn.addEventListener('click', function(event) {
 });</script>
 </head>
 <body>
-    <img src="img/manda1.PNG">
+    <img src="img/manda1.PNG" class="image-class">
     <img src="manda.PNG">
     <p><button class="copy-image">Copy Image</button></p>
 </body>
