--- a/1.html
+++ b/1.html
@@ -2,30 +2,23 @@
 <html>
 <head>
     <title>sito di piccia</title>
-    <script> var copyImgBtn = document.querySelector('.copy-image');  
-copyImgBtn.addEventListener('click', function(event) {  
-  // Select the email link anchor text  
-  var imageElem = document.querySelector('.image-class');  
-  var range = document.createRange();  
-  range.selectNode(imageElem);  
-  window.getSelection().addRange(range);  
-
-  try {  
-    // Now that we've selected the anchor text, execute the copy command  
-    var successful = document.execCommand('copy');  
-    var msg = successful ? 'successful' : 'unsuccessful';  
-    console.log('Copy image command was ' + msg);  
-  } catch(err) {  
-    console.log('Oops, unable to copy');  
-  }  
-
-  // Remove the selections - NOTE: Should use
-  // removeRange(range) when it is supported  
-  window.getSelection().removeAllRanges();  
-});</script>
+    <script> async function copyPicture() {
+  try {
+    const response = await fetch('./logo.png');
+    const blob = await response.blob();
+    await navigator.clipboard.write([
+      new ClipboardItem({
+        [blob.type]: blob
+      })
+    ]);
+    console.log('Image copied.');
+  } catch (err) {
+    console.error(err.name, err.message);
+  }
+};</script>
 </head>
 <body>
-    <img src="img/manda1.PNG" class="image-class">
+    <img src="img/manda1.PNG" onclick="copyPicture()">
     <img src="manda.PNG">
     <p><button class="copy-image">Copy Image</button></p>
 </body>
