--- a/1.html
+++ b/1.html
@@ -4,7 +4,7 @@
     <title>sito di piccia</title>
     <script> async function copyPicture() {
   try {
-    const response = await fetch('./logo.png');
+    const response = await fetch('./manda.PNG');
     const blob = await response.blob();
     await navigator.clipboard.write([
       new ClipboardItem({
