--- a/1.html
+++ b/1.html
@@ -1,25 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>sito di piccia</title>
-    <script> async function copyPicture() {
-  try {
-    const response = await fetch('./manda.PNG');
-    const blob = await response.blob();
-    await navigator.clipboard.write([
-      new ClipboardItem({
-        [blob.type]: blob
-      })
-    ]);
-    console.log('Image copied.');
-  } catch (err) {
-    console.error(err.name, err.message);
-  }
-};</script>
+    <title>Esempio di copia immagini in HTML</title>
 </head>
 <body>
-    <img src="img/manda1.PNG" onclick="copyPicture()">
-    <img src="manda.PNG">
-    <p><button class="copy-image">Copy Image</button></p>
+    <img src="manda.PNG" alt="Descrizione immagine 1">
+    <a href="manda.PNG" style="display: block; text-align: center;">Copia URL immagine 1</a>
+
+    <img src="manda1.PNG" alt="Descrizione immagine 2">
+    <a href="manda1.PNG" style="display: block; text-align: center;">Copia URL immagine 2</a>
 </body>
 </html>
